<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/_redeemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redeemTitle"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/redeemResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/_redeemTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Cancelled"
            tools:textColor="#FF0000"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/_redeemInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/redeemAmountInputHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/redeemResult"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/basketAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/redeemStyled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/redeemStyledAction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_redeemInputLayout"
            />

        <Button
            android:id="@+id/redeemDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FF009688"
            android:text="@string/redeemAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_redeemInputLayout"
            />

        <View
            android:id="@+id/_redeemDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/redeemDefault"
            />

        <TextView
            android:id="@+id/_issueTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/issueTitle"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_redeemDivider"
            />

        <TextView
            android:id="@+id/issueResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            app:layout_constraintTop_toBottomOf="@id/_issueTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Cancelled"
            android:textColor="#FF0000"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/_issueInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/issueAmountInputHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/issueResult"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/issueAmount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/issueStyled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/issueStyledAction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_issueInputLayout"
            />

        <Button
            android:id="@+id/issueDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FF009688"
            android:text="@string/issueAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_issueInputLayout"
            />

        <View
            android:id="@+id/_homeDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/issueDefault"
            />

        <TextView
            android:id="@+id/_homeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/homeTitle"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_homeDivider"
            />

        <Button
            android:id="@+id/homeStyled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homeStyledAction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_homeTitle"
            />

        <Button
            android:id="@+id/homeDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF009688"
            android:text="@string/homeAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_homeTitle"
            />

        <View
            android:id="@+id/_currencyDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/homeDefault"
            />

        <TextView
            android:id="@+id/_currencyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/currencyTitle"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/_currencyDivider"
            />

        <RadioGroup
            android:id="@+id/currencyGroup"
            android:paddingTop="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/_currencyTitle"
            app:layout_constraintTop_toBottomOf="@+id/_currencyDivider"
            >

            <RadioButton
                android:id="@+id/currencyGbp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currencyGbp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                />
            <RadioButton
                android:id="@+id/currencyUsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currencyUsd"
                />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

